# my-computer-vision-jumpshot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSES.md  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.txt  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci
my-computer-vision-jumpshot/io/: video_utils.py
my-computer-vision-jumpshot/tracking/: norfair_wrapper.py
my_computer_vision_jumpshot/: cli.py
my_computer_vision_jumpshot/inference/: detect_torchvision.py  pose_mediapipe.py
my_computer_vision_jumpshot/io/: renderer.py
my_computer_vision_jumpshot/processing/: smoothing.py
scripts/: run_demo.sh
tests/licensing/: fetch_python_licenses.sh  fetch_web_licenses.sh
