[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-computer-vision-jumpshot"
version = "0.1.0"
description = "PoC: basketball jump shot pose detection, ball tracking, and 3D avatar export."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENCE" }
authors = [{ name = "Your Name" }]
keywords = ["computer vision", "pose estimation", "basketball", "MMPose", "YOLOX", "ByteTrack"]

dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "scipy>=1.10",
  "pydantic>=2",
  "trimesh>=4",
  "rich>=13",
  "typer>=0.12",
]

[project.optional-dependencies]
# Vision stack installed via scripts (uses OpenMMLab's toolchain for correct wheels)
vision = [
  "mmengine>=0.9",
  "mmcv>=2.0",
  "mmpose>=1.3",
  "yolox>=0.3",
  "bytetracker",
]
dev = [
  "pytest>=7", "pytest-cov",
  "pre-commit>=3.6",
  "ruff>=0.4", "mypy>=1.7", "types-PyYAML"
]

[project.scripts]
mycvj = "my_computer_vision_jumpshot.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","B","UP","NPY","PL","RUF"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
